--- a/sdks/python/test-suites/dataflow/common.gradle
+++ b/sdks/python/test-suites/dataflow/common.gradle
@@ -30,9 +30,10 @@ def runScriptsDir = "${rootDir}/sdks/python/scripts"
 
 // Basic test options for ITs running on Jenkins.
 def basicTestOpts = [
-    "--nocapture",  // print stdout instantly
-    "--processes=8",  // run tests in parallel
-    "--process-timeout=4500", // timeout of whole command execution
+    "--log-cli-level=info",  // print stdout instantly
+    "--numprocesses=8", // run tests in parallel
+    "--timeout=4500", // timeout of whole command execution
+    "--color=yes", // console color
 ]
 
 def preCommitIT(String runScriptsDir, String envdir, Boolean streaming, Boolean runnerV2, String pythonSuffix) {
@@ -48,22 +49,23 @@ def preCommitIT(String runScriptsDir, String envdir, Boolean streaming, Boolean 
     doLast {
       // Basic integration tests to run in PreCommit
       def precommitTests = streaming ? [
-              "apache_beam.examples.streaming_wordcount_it_test:StreamingWordCountIT.test_streaming_wordcount_it",
+              "apache_beam/examples/streaming_wordcount_it_test.py::StreamingWordCountIT::test_streaming_wordcount_it",
       ] : [
-              "apache_beam.examples.wordcount_it_test:WordCountIT.test_wordcount_it",
+              "apache_beam/examples/wordcount_it_test.py::WordCountIT::test_wordcount_it",
       ]
       def testOpts = [
-              "--tests=${precommitTests.join(',')}",
-              "--nocapture",    // Print stdout instantly
-              "--processes=2",    // Number of tests running in parallel
-              "--process-timeout=1800",   // Timeout of whole command execution
+              "${precommitTests.join(' ')}",
+              "--log-cli-level=info",    // Print stdout instantly
+              "--numprocesses=2",    // Number of tests running in parallel
+              "--timeout=1800",   // Timeout of whole command execution
       ]
 
       def argMap = [
               "test_opts"   : testOpts,
               "sdk_location": files(configurations.distTarBall.files).singleFile,
               "worker_jar"  : dataflowWorkerJar,
-              "suite"       : "preCommitIT-df${pythonSuffix}"
+              "suite"       : "preCommitIT-df${pythonSuffix}",
+              "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
       ]
 
       if (runnerV2) {
@@ -107,14 +109,16 @@ task postCommitIT {
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
 
   doLast {
-    def testOpts = basicTestOpts + ["--attr=IT"]
-
-    def cmdArgs = mapToArgString([
-        "test_opts": testOpts,
+    def argMap = [
+        "test_opts": basicTestOpts,
         "sdk_location": files(configurations.distTarBall.files).singleFile,
         "worker_jar": dataflowWorkerJar,
-        "suite": "postCommitIT-df${pythonVersionSuffix}"
-    ])
+        "suite": "postCommitIT-df${pythonVersionSuffix}",
+        "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
+        "collect": "it_postcommit"
+    ]
+
+    def cmdArgs = mapToArgString(argMap)
     exec {
       executable 'sh'
       args '-c', ". ${envdir}/bin/activate && ${runScriptsDir}/run_integration_test.sh $cmdArgs"
@@ -128,12 +132,14 @@ task validatesRunnerBatchTests {
   dependsOn ":runners:google-cloud-dataflow-java:worker:shadowJar"
 
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
-  def testOpts = basicTestOpts + ["--attr=ValidatesRunner,!sickbay-batch"]
   def argMap = [
-          "test_opts"   : testOpts,
+          "test_opts"   : basicTestOpts,
           "worker_jar"  : dataflowWorkerJar,
           "sdk_location": files(configurations.distTarBall.files).singleFile,
-          "suite"       : "validatesRunnerBatchTests-df${pythonVersionSuffix}"]
+          "suite"       : "validatesRunnerBatchTests-df${pythonVersionSuffix}",
+          "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
+          "collect": "it_validatesrunner and not no_sickbay_batch"
+          ]
 
   if (project.hasProperty('useRunnerV2')) {
     argMap.put("runner_v2", "true")
@@ -158,12 +164,14 @@ task validatesRunnerStreamingTests {
   def dataflowWorkerJar = project(":runners:google-cloud-dataflow-java:worker").shadowJar.archivePath
 
   // TODO(BEAM-3544,BEAM-5025): Disable tests with 'sickbay-streaming' tag.
-  def testOpts = basicTestOpts + ["--attr=ValidatesRunner,!sickbay-streaming"]
-  def argMap = ["test_opts": testOpts,
+  def argMap = ["test_opts": basicTestOpts,
                 "streaming": "true",
                 "sdk_location": files(configurations.distTarBall.files).singleFile,
                 "worker_jar": dataflowWorkerJar,
-                "suite": "validatesRunnerStreamingTests-df${pythonVersionSuffix}"]
+                "suite": "validatesRunnerStreamingTests-df${pythonVersionSuffix}",
+                "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed
+                "collect": "it_validatesrunner and not no_sickbay_streaming"
+                ]
   if (project.hasProperty('useRunnerV2')) {
     argMap.put("runner_v2", "true")
     // KMS is not supported for streaming engine.
