--- a/sdks/python/test-suites/portable/common.gradle
+++ b/sdks/python/test-suites/portable/common.gradle
@@ -66,9 +66,9 @@ task flinkTriggerTranscript() {
           . ${envdir}/bin/activate \\
           && cd ${pythonRootDir} \\
           && pip install -e .[test] \\
-          && python setup.py nosetests \\
-              --tests apache_beam.transforms.trigger_test:WeakTestStreamTranscriptTest \\
-              --test-pipeline-options='--runner=FlinkRunner --environment_type=LOOPBACK --flink_job_server_jar=${project(":runners:flink:${latestFlinkVersion}:job-server:").shadowJar.archivePath}'
+          && pytest \\
+              apache_beam/transforms/trigger_test.py::WeakTestStreamTranscriptTest \\
+              --test-pipeline-options='--runner=FlinkRunner --environment_type=LOOPBACK --flink_job_server_jar=${project(":runners:flink:${latestFlinkVersion}:job-server:").shadowJar.archivePath}' \\
           """
     }
   }
@@ -175,13 +175,13 @@ project.task("postCommitPy${pythonVersionSuffix}IT") {
 
   doLast {
     def tests = [
-            "apache_beam.io.gcp.bigquery_read_it_test",
-            "apache_beam.io.external.xlang_jdbcio_it_test",
-            "apache_beam.io.external.xlang_kafkaio_it_test",
-            "apache_beam.io.external.xlang_kinesisio_it_test",
-            "apache_beam.io.gcp.tests.xlang_spannerio_it_test",
+            "apache_beam/io/gcp/bigquery_read_it_test.py",
+            "apache_beam/io/external/xlang_jdbcio_it_test.py",
+            "apache_beam/io/external/xlang_kafkaio_it_test.py",
+            "apache_beam/io/external/xlang_kinesisio_it_test.py",
+            "apache_beam/io/gcp/tests/xlang_spannerio_it_test.py",
     ]
-    def testOpts = ["--tests=${tests.join(',')}"]
+    def testOpts = ["${tests.join(' ')}"]
     def pipelineOpts = [
         "--runner=FlinkRunner",
         "--project=apache-beam-testing",
@@ -193,6 +193,7 @@ project.task("postCommitPy${pythonVersionSuffix}IT") {
             "test_opts": testOpts,
             "suite": "postCommitIT-flink-py${pythonVersionSuffix}",
             "pipeline_opts": pipelineOpts.join(" "),
+            "pytest": true, // TODO(BEAM-3713): Remove this once nose is removed.
     ])
     def kafkaJar = project(":sdks:java:testing:kafka-service:").buildTestKafkaServiceJar.archivePath
     exec {
